@@ -1,3 +1,4 @@
+* Don't return cached preferences, try to enrich it with the transaction context
 * Use UNION for 'Or'-ed domain with subqueries
 * Add option to strip leading and trailing whitespace from fields.Char
 * Allow column sql types to be tested from the table handler
